[package]
name = "backend-api-rust-actix"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Darimont <thomas.darimont@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.1", features = ["openssl"] }
actix-4-jwt-auth = "0.4.1"
openssl = "0.10.38"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79" }
chrono = "0.4.19"
actix-cors = "0.6.0"

[dev-dependencies]
cargo-watch = "8.1.1"