[package]
name = "backend-api-rust-actix"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Darimont <thomas.darimont@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.1", features = ["openssl"] }
actix-cors = "0.6.1"
actix-4-jwt-auth = "0.4.2"
openssl = "0.10.40"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }
chrono = "0.4.19"
env_logger = "0.9.0"

[dev-dependencies]
# cargo watch --quiet --clear --exec run
cargo-watch = "8.1.1"