[package]
name = "backend-api-rust-actix"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Darimont <thomas.darimont@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1", features = ["openssl"] }
actix-cors = "0.6.4"
actix-4-jwt-auth = "0.4.2" # TODO update to 1.0.0
openssl = "0.10.48"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.95" }
chrono = "0.4.24"
env_logger = "0.10.0"

[dev-dependencies]
# cargo +nightly watch --quiet --clear --exec run
cargo-watch = "8.4.0"