[package]
name = "backend-api-rust-rocket"
version = "0.1.0"
authors = ["Thomas Darimont <thomas.darimont@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version ="1.0.157", features = ["derive"]}
lazy_static = "1.4.0"
log = "0.4.17"
env_logger = "0.10.0"
chrono = "0.4.24"
jsonwebtoken = "8.3.0"
rocket = { version = "0.5.0-rc.2", features = ["tls", "json", "serde_json"] }
reqwest = { version = "0.11.14", features = ["blocking", "json"] }

[dev-dependencies]
cargo-watch = "8.4.0"